Port to 1.17 fabric