@@ -2,40 +2,25 @@ package com.kotori316.infchest.tiles;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import net.minecraft.inventory.ItemStackHelper;
+import net.minecraft.inventory.Inventories;
 import net.minecraft.item.ItemStack;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.util.NonNullList;
-import net.minecraftforge.fml.ModList;
+import net.minecraft.nbt.NbtCompound;
+import net.minecraft.util.collection.DefaultedList;
 
 import com.kotori316.infchest.InfChest;
-import com.kotori316.infchest.integration.StorageBoxStack;
 
-public class InsertingHook {
-    private final List<Hook> hooks;
+public record InsertingHook(List<Hook> hooks) {
     private static final List<Hook> DEFAULT_HOOKS;
 
     static {
-        List<Hook> list = new ArrayList<>();
-        // Storage Box
-        if (ModList.get().isLoaded(StorageBoxStack.modId)) {
-            list.add(new StorageBoxStack.StorageBoxHook());
-        }
-        list.add(new InfChestHook());
-        DEFAULT_HOOKS = Collections.unmodifiableList(list);
+        DEFAULT_HOOKS = List.of(new InfChestHook());
     }
 
     public static InsertingHook getInstance() {
         return new InsertingHook(DEFAULT_HOOKS);
-    }
-
-    public InsertingHook(List<Hook> hooks) {
-        this.hooks = hooks;
     }
 
     public Optional<Hook> findHookObject(ItemStack maybeHookItem) {
@@ -60,16 +45,16 @@ public class InsertingHook {
 
         @Override
         public BigInteger getCount(ItemStack hookItem) {
-            CompoundNBT tag = hookItem.getChildTag(TileInfChest.NBT_BLOCK_TAG);
+            NbtCompound tag = hookItem.getSubTag(TileInfChest.NBT_BLOCK_TAG);
             if (tag == null) {
                 return BigInteger.ZERO;
             }
 
             ItemStack secondStack = getSecondItem(tag);
-            ItemStack holding = ItemStack.read(tag.getCompound(TileInfChest.NBT_ITEM));
+            ItemStack holding = ItemStack.fromNbt(tag.getCompound(TileInfChest.NBT_ITEM));
             holding.setCount(1);
             BigInteger second;
-            if (ItemStack.areItemsEqual(secondStack, holding) && ItemStack.areItemStackTagsEqual(secondStack, holding))
+            if (ItemStack.areItemsEqual(secondStack, holding) && ItemStack.areTagsEqual(secondStack, holding))
                 second = BigInteger.valueOf(secondStack.getCount());
             else
                 second = BigInteger.ZERO;
@@ -87,23 +72,23 @@ public class InsertingHook {
 
         @Override
         public ItemStack removeAllItems(ItemStack hookItem) {
-            hookItem.removeChildTag(TileInfChest.NBT_BLOCK_TAG);
+            hookItem.removeSubTag(TileInfChest.NBT_BLOCK_TAG);
             return hookItem;
         }
 
         @Override
         public boolean checkItemAcceptable(ItemStack chestContent, ItemStack hookItem) {
-            CompoundNBT tag = hookItem.getChildTag(TileInfChest.NBT_BLOCK_TAG);
+            NbtCompound tag = hookItem.getSubTag(TileInfChest.NBT_BLOCK_TAG);
             if (tag == null) {
                 return false;
             }
-            ItemStack holding = ItemStack.read(tag.getCompound(TileInfChest.NBT_ITEM));
-            return ItemStack.areItemsEqual(chestContent, holding) && ItemStack.areItemStackTagsEqual(chestContent, holding);
+            ItemStack holding = ItemStack.fromNbt(tag.getCompound(TileInfChest.NBT_ITEM));
+            return ItemStack.areItemsEqual(chestContent, holding) && ItemStack.areTagsEqual(chestContent, holding);
         }
 
-        private static ItemStack getSecondItem(CompoundNBT nbt) {
-            NonNullList<ItemStack> list = NonNullList.withSize(2, ItemStack.EMPTY);
-            ItemStackHelper.loadAllItems(nbt, list);
+        private static ItemStack getSecondItem(NbtCompound nbt) {
+            DefaultedList<ItemStack> list = DefaultedList.ofSize(2, ItemStack.EMPTY);
+            Inventories.readNbt(nbt, list);
             return list.get(1);
         }
     }
